Ajustado test para validação de conjuge